did away with index.js, got some buttons working

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,15 @@
 }
 
 ul{
-  border: solid;
   list-style: none;
   text-align: center;
   display: block;
 }
 
 li {
+  margin: 20px;
+  padding: 20px;
+  border: solid;
+
   
 }
