--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,12 @@
 
+*{
+  background-color: rgb(248, 234, 255);
+}
+
+body {
+  border: solid;
+}
+
 h1 {
   text-align: center;
 }
@@ -7,14 +15,36 @@ ul{
   list-style: none;
   text-align: center;
   display: block;
+  padding: 20px;
 }
 
 li {
-  margin: 20px;
+  margin: 10px;
   padding: 20px;
+  padding-left: 10px;
   border: solid;
+  border-width: 3px;
+  font-size: 30px;
+  text-shadow: indigo;
 }
 
 .add-filter {
+  text-align: center;
+}
+
+button, select{
+  font-size: medium;
+  border: solid;
+  border-width: 3px;
+  cursor: pointer;
+  padding: 10px 10px;
+  margin: 10px;
+}
+
+
+
+fieldset {
+  padding: 10px;
+  margin: 10px;
   text-align: center;
 }
